--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="logo192.png"/>
     <title>Juno Stakedrop</title>
-    <link rel="stylesheet" href="juno.css">
+    <link rel="stylesheet" href="juno.min.css">
   </head>
   <body>
     <noscript>
